--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
+    <script src="js/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="js/bower_components/three.js/three.js"></script>
     <script src="js/orbitControll.js"></script>
     <title></title>
@@ -11,4 +12,5 @@
     
 </body>
 <script src="js/earthScene.js"></script>
+<script src="js/nasaWebservice.js"></script>
 </html>
