--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="js/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="js/bower_components/three.js/three.js"></script>
     <script src="js/orbitControll.js"></script>
+    <script src="js/xmlToJson.js"></script>
     <title></title>
 </head>
 <body>
