--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
     <script src="js/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="js/bower_components/three.js/three.js"></script>
-    <script src="js/orbitControll.js"></script>
-    <script src="js/xmlToJson.js"></script>
+    <script src="js/others/orbitControll.js"></script>
+    <script src="js/others/xmlToJson.js"></script>
+    <script src="js/others/atmospherematerial.js"></script>
+    <script src="js/others/suncalc.js"></script>
     <title></title>
 </head>
 <body>
     
 </body>
 <script src="js/earthScene.js"></script>
+<script src="js/nasaRequest.js"></script>
 <script src="js/nasaWebservice.js"></script>
 </html>
